syntax = "proto3";
package jim380.re.fix;

option go_package = "github.com/jim380/Re/x/fix/types";

message Security {
  uint64 id = 1;
  string sessionID = 2; 
  string securityReqID = 3; 
  
}
